# lobo-brain

./: .gitignore  CMakeLists.txt  Makefile  MinMaxTree.cpp  MinimaxVSRL.cpp  README.md  TicTacToe_ReinforcementLearning.ipynb  VDE.c  VDE.cpp  VDE.hpp  VDE_teste.cpp  a.out  brainstorm_rl_imp.txt  dec  decision  decision.cpp  decision.hpp  decision_teste  decision_teste.cpp  evaluations.cpp  evaluations.hpp  evaluations_teste.cpp  implementation-details-graph.txt  main.cpp  minimaxRA  minimaxRandomAgent.cpp  move.cpp  move.hpp  move_teste  move_teste.cpp  new_idea.txt  node.cpp  node.hpp  node_teste  node_teste.cpp  nsei.cpp  tabuleiro.cpp  tabuleiro.hpp  test  teste.cpp  (+12 more)
alinhamento/: Makefile  agent.cpp  agent.hpp  dec  decision.cpp  decision.hpp  decision_teste.cpp  evaluations.cpp  implementation-details-graph.txt  move.cpp  node.cpp  siphasher.cpp  siphasher.hpp  state.cpp  state.hpp  tabuleiro.cpp  tabuleiro.hpp  tree.cpp  tree.hpp
alinhamento/new-lobo/: README.md
bloqueio/: Makefile  dec  decision.cpp  decision_teste  decision_teste.cpp  evaluations.cpp  evaluations.hpp  evaluations_teste.cpp  move.cpp  move.hpp  move_teste  move_teste.cpp  node_teste  node_teste.cpp  tabuleiro.cpp  tabuleiro.hpp  tree.cpp  tree.hpp  tree_teste  tree_teste.cpp  vertex.cpp  vertex.hpp
docs/: q-table_p2.csv  reward_decay.csv  reward_greedy.csv  winrate_plot_greedy.csv  winrate_vs_minimax_1x10.csv
minimax/alinhamento/: LoBoBrain.cpp  Makefile  (+27 more)
src/: LoBoBrain.cpp  LoBoBrain.hpp  MiniMax.cpp  MiniMax.hpp  MinimaxVSRL.cpp  algorithms_analysis.ipynb  minimaxRandomAgent.cpp
(+73 files in other folders)
